# GdV-Raytracer-rust

./: .gitignore  Cargo.toml
benches/: my_benchmark.rs
res/scenes/: scene_1.json
res/scenes/shadow/: shadow.sce
src/: lib.rs  main.rs
src/raytracer_lib/: mod.rs
src/raytracer_lib/camera/: mod.rs  perspective_cam.rs
src/raytracer_lib/image/: mod.rs
src/raytracer_lib/light/: mod.rs  pointlight.rs
src/raytracer_lib/object/: material.rs  mod.rs
src/raytracer_lib/object/shapes/: mod.rs  plane.rs  sphere.rs
src/raytracer_lib/raytracer/: mod.rs
src/raytracer_lib/scene/: mod.rs
src/raytracer_lib/utils/: ray.rs  vector.rs
