[package]
name = "cg-raytracer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
nalgebra = "0.31.4"
png = "0.17.7"
rayon = "1.6.0"
serde = "1.0.147"
serde_json = "1.0.87"


[[bench]]
name = "my_benchmark"
harness = false